@@ -1,3 +1,9 @@
+2009-12-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/ao_openuri.c:
+   Remove trailing dots and colons from URIs.
+
+
 2009-11-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/ao_tasks.c:
